examples/rejections/canisters/rejections/rejections.did
type ManualReply = variant {
  NoError;
  CanisterError;
  SysTransient;
  DestinationInvalid;
  Unknown;
  SysFatal;
  CanisterReject;
};
service : () -> {
  get_rejection_code_canister_error : () -> (ManualReply);
  get_rejection_code_canister_reject : () -> (ManualReply);
  get_rejection_code_destination_invalid : () -> (ManualReply);
  get_rejection_code_no_error : () -> (ManualReply);
  get_rejection_message : (text) -> (text);
}